# tph_linalg

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: config.cmake.in  pkg-config.pc.in
include/tph/: tph_linalg.hpp
tests/: CMakeLists.txt  static_tests.cpp
